# aurora-gallery-tauri

./: # SigLIP 2文件清单以及下载地址：.md  .gitignore  257.txt  LICENSE  PR_DRAFT_repair-rename-folder-refresh.md  README.md  clean-cache.bat  clean-cache.ps1  clockit_backup_20251221.csv  demo1.txt  demo2.txt  demo3.txt  index.css  index.html  log2.txt  package-lock.json  package.json  performance-issues-list.md  query_colors_db.py  tailwind.config.js  tauri.localhost-1765895698443.txt  tauri.localhost-1765896321742.txt  tauri.localhost-1765896684123.txt  tauri.localhost-1765897206458.txt  tauri.localhost-1766082853204.txt  tauri.localhost-1766084991113.txt  temp_api.ts  tsconfig.json  vite.config.ts  主色调数据库问题.md  侧边栏.md  对比功能.md  性能优化方案三.txt  真实应用修改建议.md  终端信息.txt
.specstory/history/: 2025-12-14_11-45Z-缩略图生成库切换.md  2025-12-14_19-27Z-软件目录设置持久化问题.md  2025-12-14_20-17Z-复现步骤调试日志为空.md  2025-12-15_10-47Z-tauri-控制台日志差异.md  2025-12-15_12-57Z-缩略图缓存-key-生成.md  2025-12-15_14-08Z-项目缩略图错误.md  2025-12-15_18-11Z-项目缩略图持久化存储.md  2025-12-16_08-06Z-缩略图缓存目录路径.md  2025-12-16_11-15Z-png-缩略图生成问题.md  2025-12-16_15-57Z-鼠标悬停预览动画问题.md  2025-12-16_16-40Z-tauri-代码更新问题.md  2025-12-16_19-51Z-folder-content-thumbnails.md  2025-12-16_20-40Z-thumbnail-loading-unknown-url-scheme.md  2025-12-17_03-26Z-tauri-base64-缩略图性能问题.md  2025-12-17_08-57Z-图片查看器闪烁优化.md  2025-12-17_12-06Z-文件主界面滚动位置记忆.md  2025-12-17_19-42Z-选中内容视觉标识.md  2025-12-18_08-43Z-untitled.md  2025-12-18_08-43Z-多缩略图滚动掉帧.md  2025-12-18_19-45Z-system-tray-interaction-issue.md  2025-12-19_13-41Z-右键菜单复制到文件夹问题.md  2025-12-19_18-53Z-tauri-minimum-window-dimensions.md  2025-12-19_19-01Z-人物界面搜索框限制.md  2025-12-20_19-16Z-app-tsx-中的拖拽功能.md  2025-12-22_13-33Z-软件内文件拖拽移动.md  2025-12-23_18-58Z-外部文件拖拽复制移动问题.md  2025-12-24_18-49Z-tauri-拖拽功能两难.md  2025-12-25_13-47Z-powershell-运行错误.md  2026-01-02_08-39Z-wgpu-缩略图-cpu-模式.md  2026-01-02_10-42Z-wgpu-缩略图生成性能问题.md  2026-01-02_10-56Z-文件扫描性能优化.md  2026-01-02_11-30Z-主色调任务面板逻辑.md  2026-01-02_12-03Z-软件主色调提案流程.md
.trae/documents/: AddImageModal 添加排序和分组功能.md  CLIP-ViT-L-14性能优化计划.md  CLIP模型切换问题修复计划.md  ImageViewer右键菜单添加图片对比功能.md  clip_download_fix_plan.md  fix-model-loading-placeholder.md  plan_20260126_181826.md  为 AddImageModal 添加缺失的翻译键.md  为PersonGrid添加排序与分组功能.md  优化 ImageComparer 4K 大图性能.md  优化主色调提取性能.md  优化图片对比组件退出参考模式时的状态恢复.md  修复 .aurora 文件保存时图片为 0KB 的问题.md  修复 ColorPickerPopover 拖动回弹问题.md  修复 Rust 高风险的 unwrap() 调用.md  修复 TabBar 标签页切换问题.md  修复.aurora文件跨库加载问题.md  修复AI批量重命名样式问题.md  修复HDD扫描文件丢失问题 (1).md  修复HDD扫描文件丢失问题.md  修复HDD文件扫描不完整问题.md  修复专题封面图片锯齿问题.md  修复专题数据丢失问题.md  修复中键拖动画布漂移问题.md  修复主专题中新建子专题的跳转问题.md  修复主色调数据库错误文件列表不自动清理已删除文件的问题.md  修复人物区域布局问题.md  修复人物界面Shift+范围选择功能.md  修复加载.aurora文件后画布自适应缩放问题.md  修复参考模式标签页拖动时消失问题.md  修复图片对比功能的三个问题.md  修复图片对比组件图片不立即显示问题.md  修复图片对比组件窗口最大化问题.md  修复扫描进度显示问题.md  修复根目录切换时人物和专题数据同步问题.md  修复添加图片到人物时数据未持久化问题.md  修复颜色搜索只返回部分图片的问题.md  修改图片对比组件的ESC和鼠标返回键行为.md  参考模式 TabBar 悬停显示功能.md  参考模式UI优化方案.md  (+21 more)
docs/: AI服务商集成与优化-实现记录.md  AI自动命名功能实现记录.md  BUG_FIX_CATEGORY_PERSISTENCE.md  CLIP模型集成实现记录.md  FIRST_RUN_FLOW.md  HDD扫描问题修复总结.md  IN_APP_UPDATE_DOWNLOAD_IMPLEMENTATION.md  OPTIMIZATION_ROOT_DIR_SWITCH.md  RENAME_REFRESH_PERF_FIX.md  Release版本终端日志输出配置.md  SCAN_PERFORMANCE_OPTIMIZATION.md  STARTUP_TO_UI_FLOW.md  SUPPORT_AVIF_JXL.md  TabBar参考模式修改记录.md  UPDATE_CHECKER_IMPLEMENTATION.md  main-rs-module-refactoring.md  person-sort-group-feature.md  主色调数据库管理功能实现记录.md  参考模式实现总结.md  右键菜单图片对比功能增强-实现记录.md  图片对比信息存储方案改进.md
log/: Failed to load resource net.txt  dev.txt  log.txt  tauri.localhost-1765738160767.txt
memory/: API_REFERENCE.md  CHANGELOG_from_code.md  MODULE_DISTRIBUTION.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  TECHNICAL_ARCHITECTURE.md  architecture.md  context.md  drag-drop-complete-implementation.md  drag-drop-dom-implementation.md  product.md  tasks.md  tech.md
src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  build_output.txt  check_errors.txt  errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clip_commands.rs  color_commands.rs  color_db.rs  color_extractor.rs  color_search.rs  color_worker.rs  db_commands.rs  file_operations.rs  file_types.rs  image_utils.rs  main.rs  scanner.rs  system_commands.rs  thumbnail.rs  update_commands.rs  update_downloader.rs  updater.rs  window_commands.rs
src-tauri/src/clip/: embedding.rs  mod.rs  model.rs  preprocessor.rs  search.rs
src-tauri/src/clip/models/: clip_vit.rs  mod.rs  siglip2.rs
src-tauri/src/db/: file_index.rs  file_metadata.rs  mod.rs  persons.rs  topics.rs
src/api/: tauri-bridge.ts
(+83 files in other folders)
