[package]
name = "aurora-gallery-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["custom-protocol"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
image = { version = "0.24", features = ["jpeg", "png", "gif", "webp"] }
webp = "0.2"
fast_image_resize = "3.0"
rayon = "1.8"
base64 = "0.21"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

