[package]
name = "aurora-gallery"
version = "1.0.0"
description = "A modern image gallery and management application"
authors = ["MISAKIMIKU"]
license = "MIT"
repository = "https://github.com/misakimiku2/aurora-gallery-tauri"
edition = "2021"
# Ensure `cargo run` picks the app binary when multiple bins exist (e.g., debug helpers)
default-run = "aurora-gallery"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "custom-protocol", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-drag = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8"
imageinfo = "0.7"
image = { version = "0.24", features = ["jpeg", "png", "gif", "webp"] }
jxl-oxide = { version = "0.9.0", features = ["rayon"] }
webp = "0.2"
fast_image_resize = "3.0"
ab_glyph = "0.2"
ab_glyph_rasterizer = "0.1"
rayon = "1.8"
base64 = "0.21"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
palette = { version = "0.7", features = ["std"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
color-thief = "0.2.2"
rusqlite = { version = "0.30", features = ["bundled", "serde_json"] }
futures = "0.3"
arboard = "3"
num_cpus = "1.16"
crossbeam-channel = "0.5"
jpeg-decoder = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
once_cell = "1.19"
futures-util = "0.3"
bytes = "1"

# CLIP Model Support (ONNX Runtime with CUDA)
ort = { version = "2.0.0-rc.9", features = ["cuda", "ndarray"] }
ndarray = { version = "0.15", features = ["rayon"] }
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

